k8s/app/templates/vm/vminsert-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-victoria-metrics-cluster-vminsert
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vminsert.naren.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vm-victoria-metrics-cluster-vminsert
            port:
              number: 8480
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-victoria-metrics-cluster-vmselect
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vmselect.naren.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vm-victoria-metrics-cluster-vmselect
            port:
              number: 8481
